Edit Unhasstop OK 8/1/2560

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,10 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/icon"
-        android:layout_below="@id/textView"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:layout_width="wrap_content"
